# brittlizer

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BitCrusher.h  Decimator.h  Distortion.h  NoiseGenerator.h  OutputStage.h
docs/: BrittLizer-Design.md  DEVGUIDE.md  macos-build-test-guide.md
scripts/: build-macos.sh
test/: test_dsp.py
